--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
     "type": "module",
+    "license": "MIT"
     "scripts": {
         "dev": "vite",
         "build": "vite build"
