--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "postcss": "^8.4.6",
         "sass": "^1.69.5",
         "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vite-plugin-externalize-dependencies": "^0.10.0"
     }
 }
