--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
+
+
 {
     "private": true,
     "type": "module",
@@ -14,7 +16,6 @@
         "postcss": "^8.4.6",
         "sass": "^1.69.5",
         "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0",
-        "vite-plugin-externalize-dependencies": "^0.10.0"
+        "vite": "^4.0.0"
     }
 }
