--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
     "private": true,
     "type": "module",
@@ -17,5 +15,8 @@
         "sass": "^1.69.5",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.2"
     }
 }
