--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "bootstrap": "^5.3.2"
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.2",
+        "lightpick": "^1.6.2",
+        "moment": "^2.29.4"
     }
 }
