--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "prettier": "prettier --check './**/*(?<!min)\\.(css|js|php|html)'"
     },
     "devDependencies": {
+        "@prettier/plugin-php": "^0.21.0",
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.6",
+        "prettier": "^3.1.0",
         "sass": "^1.69.5",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
