Полностью доработан функционал календаря аренды
Теперь на календаре отмечаются все даты по объекту, уже имеющиеся в базе. После валидации и отправки заявки на бронирование отмечаются новые.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@easepick/bundle": "^1.2.1",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.2",
         "lightpick": "^1.6.2",
