--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-prettier": "^5.0.1",
+        "laravel-echo": "^1.15.3",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.6",
         "prettier": "^3.1.0",
+        "pusher-js": "^8.3.0",
         "sass": "^1.69.5",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
@@ -27,8 +29,11 @@
     "dependencies": {
         "@easepick/bundle": "^1.2.1",
         "@popperjs/core": "^2.11.8",
+        "@vitejs/plugin-vue": "^4.5.0",
         "bootstrap": "^5.3.2",
         "lightpick": "^1.6.2",
-        "moment": "^2.29.4"
+        "moment": "^2.29.4",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.3.1"
     }
 }
