--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "alpinejs": "^3.13.3",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.2",
+        "eslint": "^8.55.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-prettier": "^5.0.1",
@@ -24,7 +25,9 @@
         "pusher-js": "^8.3.0",
         "sass": "^1.69.5",
         "tailwindcss": "^3.3.6",
-        "vite": "^4.5.1"
+        "vite": "^4.5.1",
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4"
     },
     "dependencies": {
         "@easepick/bundle": "^1.2.1",
@@ -34,6 +37,6 @@
         "lightpick": "^1.6.2",
         "moment": "^2.29.4",
         "vue": "^3.2.36",
-        "vue-loader": "^17.3.1"
+        "vue-loader": "^17.3.1",
     }
 }
