--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
         "lightpick": "^1.6.2",
         "moment": "^2.29.4",
         "vue": "^3.2.36",
-        "vue-loader": "^17.3.1",
+        "vue-loader": "^17.3.1"
     }
 }
